--- a/client/src/layouts/System/Header/Header.module.scss
+++ b/client/src/layouts/System/Header/Header.module.scss
@@ -15,11 +15,11 @@
     justify-content: space-between;
     padding: 0rem 1.25rem;
     height: 5rem;
-    background-color: var(--white);
-    border-bottom: 0.0375rem solid #ccc;
+    background: linear-gradient(135deg, #2e8b57, #b7ce63);
+    border-bottom: 0.0375rem solid rgba(255, 255, 255, 0.3);
     box-shadow:
-      0 0.0625rem 0.625rem rgba(0, 0, 0, 0.09),
-      0 0.0625rem 0.125rem rgba(0, 0, 0, 0.02);
+      0 0.0625rem 0.625rem rgba(0, 0, 0, 0.2),
+      0 0.0625rem 0.125rem rgba(0, 0, 0, 0.1);
 
     .school-name {
       display: flex;
