--- a/client/src/layouts/System/Sidebar/Sidebar.module.scss
+++ b/client/src/layouts/System/Sidebar/Sidebar.module.scss
@@ -122,7 +122,7 @@
     }
 
     &::-webkit-scrollbar-thumb {
-      background: linear-gradient(180deg, #3ddab4, #0faf90);
+      background: linear-gradient(180deg, #2e8b57, #4aa96c);
       border-radius: 3.75px;
       border: 0.625px solid rgba(255, 255, 255, 0.2);
       box-shadow: 0 0 2.5px rgba(61, 218, 180, 0.4);
@@ -130,8 +130,8 @@
     }
 
     &::-webkit-scrollbar-thumb:hover {
-      background: linear-gradient(180deg, #49f5ca, #14c8a4);
-      box-shadow: 0 0 3.75px rgba(61, 218, 180, 0.6);
+      background: linear-gradient(180deg, #4aa96c, #2e8b57);
+      box-shadow: 0 0 3.75px rgba(46, 139, 87, 0.6);
     }
 
   }
@@ -207,7 +207,7 @@
       transition: none;
       border-radius: 0.5rem;
       margin: 0 1.25rem;
-      background: linear-gradient(135deg, #6fb385, #5ca16a, #8fd3b6);
+      background: linear-gradient(135deg, #2e8b57, #4aa96c);
       height: 3.25rem;
       color: var(--light);
       // transform: translateX(4px);
@@ -254,7 +254,7 @@
       a {
         border-radius: 0.4375rem;
         color: var(--light);
-        background: linear-gradient(135deg, #5ca16a, #4fa88f, #79c1b0);
+        background: linear-gradient(135deg, #2e8b57, #4aa96c);
       }
 
       transition: all 0.25s;
