--- a/client/src/pages/Customer/Profile/Profile.module.scss
+++ b/client/src/pages/Customer/Profile/Profile.module.scss
@@ -45,4 +45,8 @@
             transform: translateY(-2px);
         }
     }
+
+    :global(.ant-form-item-required::before) {
+        color: red !important;
+    }
 }
